--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NaQ-Xp-WFn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="401.5" y="1341.5"/>
+            <point key="canvasLocation" x="881.5" y="1349.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XEf-I3-qat">
@@ -86,7 +86,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="meP-Ct-bbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1583.5" y="325.5"/>
+            <point key="canvasLocation" x="1547.5" y="309.5"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="rCn-Qi-hYt">
@@ -97,7 +97,7 @@
                 </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g8e-PI-FGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="843.5" y="1341.5"/>
+            <point key="canvasLocation" x="479.5" y="1463.5"/>
         </scene>
         <!--Schedule View Controller-->
         <scene sceneID="dJg-Cv-Vne">
@@ -112,12 +112,12 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="2" translatesAutoresizingMaskIntoConstraints="NO" id="20i-1G-cCM">
-                                <rect key="frame" x="168" y="607" width="39" height="37"/>
+                                <rect key="frame" x="168" y="602" width="39" height="37"/>
                                 <color key="pageIndicatorTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
-                                <rect key="frame" x="16" y="90" width="375" height="540"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="574"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
@@ -147,7 +147,7 @@
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tryDown.png" translatesAutoresizingMaskIntoConstraints="NO" id="YC6-N0-ITM">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pointingDown2.png" translatesAutoresizingMaskIntoConstraints="NO" id="YC6-N0-ITM">
                                                     <rect key="frame" x="8" y="0.0" width="60" height="105"/>
                                                 </imageView>
                                             </subviews>
@@ -156,10 +156,15 @@
                                             <outlet property="downImage" destination="YC6-N0-ITM" id="kDP-NZ-lXx"/>
                                             <outlet property="downTime" destination="QJ9-uk-L7x" id="cge-au-VfT"/>
                                             <outlet property="locationTitle" destination="e15-ad-RDl" id="a1U-nt-FL4"/>
-                                            <segue destination="TqT-WR-H09" kind="show" identifier="routeToTime" id="kW1-E9-hUc"/>
+                                            <segue destination="TqT-WR-H09" kind="show" identifier="routeToTime" id="1R7-0W-dh9"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="rac-aS-tD6"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="454-R7-6vy" id="Uua-Yi-UWB"/>
                                     <outlet property="delegate" destination="454-R7-6vy" id="QO7-T2-DcH"/>
@@ -168,21 +173,41 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="35G-Qt-AfN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="20i-1G-cCM" secondAttribute="trailing" constant="152" id="F61-vl-PFL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="Icm-l0-xAI"/>
-                            <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="23" id="Jqm-YC-89D"/>
+                            <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="61" id="Jqm-YC-89D"/>
+                            <constraint firstItem="20i-1G-cCM" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" constant="9" id="Khb-Ch-PoZ"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="SEH-8j-C42" secondAttribute="topMargin" constant="20" id="KjN-bu-snh"/>
                             <constraint firstItem="20i-1G-cCM" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="152" id="PQA-vt-teE"/>
                             <constraint firstAttribute="centerX" secondItem="20i-1G-cCM" secondAttribute="centerX" id="R0B-da-Vpc"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="Wjc-Io-59O"/>
                             <constraint firstItem="20i-1G-cCM" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="152" id="Wo6-2E-UUl"/>
+                            <constraint firstItem="20i-1G-cCM" firstAttribute="top" secondItem="HoU-9v-eoX" secondAttribute="bottom" constant="8" id="bGe-vi-Qex"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="bV5-LO-qAR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="20i-1G-cCM" secondAttribute="trailing" constant="152" id="cVd-1Y-9r3"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="fLd-YD-Fqg"/>
+                            <constraint firstItem="20i-1G-cCM" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="152" id="fNk-PN-Ogl"/>
                             <constraint firstAttribute="trailingMargin" secondItem="20i-1G-cCM" secondAttribute="trailing" constant="152" id="j9N-6y-XCD"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="jeM-Nz-bZg"/>
+                            <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="d2o-9t-HYB" secondAttribute="bottom" id="m6Q-w8-RAH"/>
                             <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="57" id="nPZ-HF-Yga"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="uxy-BL-GhT"/>
+                            <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="28" id="xff-2x-DLD"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="35G-Qt-AfN"/>
+                                <exclude reference="Icm-l0-xAI"/>
+                                <exclude reference="KjN-bu-snh"/>
+                                <exclude reference="bV5-LO-qAR"/>
+                                <exclude reference="jeM-Nz-bZg"/>
+                                <exclude reference="Khb-Ch-PoZ"/>
                                 <exclude reference="PQA-vt-teE"/>
+                                <exclude reference="Wo6-2E-UUl"/>
                                 <exclude reference="cVd-1Y-9r3"/>
+                                <exclude reference="j9N-6y-XCD"/>
+                                <exclude reference="Jqm-YC-89D"/>
                                 <exclude reference="nPZ-HF-Yga"/>
                             </mask>
                         </variation>
@@ -195,7 +220,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q01-X7-QqX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1289.5" y="1341.5"/>
+            <point key="canvasLocation" x="1341.5" y="1245.5"/>
         </scene>
         <!--Times-->
         <scene sceneID="dUZ-Ls-zfp">
@@ -234,6 +259,11 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="RLx-Mw-YPM"/>
+                                    </mask>
+                                </variation>
                                 <connections>
                                     <outlet property="dataSource" destination="TqT-WR-H09" id="dwY-jH-QIU"/>
                                     <outlet property="delegate" destination="TqT-WR-H09" id="eTQ-mV-eMi"/>
@@ -243,17 +273,38 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="4dW-Wr-RRz" firstAttribute="leading" secondItem="QRA-cX-hRu" secondAttribute="leadingMargin" constant="-16" id="80n-Qp-dcy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="Cdh-Ui-LKv"/>
                             <constraint firstItem="4dW-Wr-RRz" firstAttribute="leading" secondItem="QRA-cX-hRu" secondAttribute="leadingMargin" constant="-16" id="E4C-hR-vq6"/>
                             <constraint firstItem="3RJ-ye-nrk" firstAttribute="top" secondItem="apj-bx-Nmp" secondAttribute="bottom" constant="65" id="ODO-NK-E2R"/>
                             <constraint firstAttribute="centerX" secondItem="4dW-Wr-RRz" secondAttribute="centerX" id="Tnd-VC-9KV"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="YGt-8B-6z2"/>
                             <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="CXg-6x-1Cp" secondAttribute="bottom" constant="44" id="aOb-bQ-5c6"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="leading" secondItem="QRA-cX-hRu" secondAttribute="leadingMargin" constant="-16" id="b66-7I-o3X"/>
+                            <constraint firstItem="apj-bx-Nmp" firstAttribute="top" secondItem="4dW-Wr-RRz" secondAttribute="bottom" constant="21" id="ldU-aE-UE7"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="CXg-6x-1Cp" secondAttribute="bottom" id="lde-HS-ifU"/>
                             <constraint firstAttribute="centerX" secondItem="apj-bx-Nmp" secondAttribute="centerX" id="mIk-pa-FAY"/>
                             <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="QRA-cX-hRu" secondAttribute="topMargin" constant="64" id="sLI-z9-Hj1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="ynq-ym-ely"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="80n-Qp-dcy"/>
+                                <exclude reference="E4C-hR-vq6"/>
+                                <exclude reference="Tnd-VC-9KV"/>
+                                <exclude reference="YGt-8B-6z2"/>
+                                <exclude reference="aOb-bQ-5c6"/>
+                                <exclude reference="sLI-z9-Hj1"/>
+                                <exclude reference="ynq-ym-ely"/>
+                            </mask>
+                        </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="Times" id="Dan-fj-vuv"/>
+                    <navigationItem key="navigationItem" title="Times" id="Dan-fj-vuv">
+                        <barButtonItem key="leftBarButtonItem" title="Back" id="YUQ-HO-gix">
+                            <connections>
+                                <action selector="backPressed:" destination="TqT-WR-H09" id="e3O-TU-YH1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="dayOfWeek" destination="apj-bx-Nmp" id="Xtx-9s-SEe"/>
@@ -262,7 +313,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aRU-7C-eIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2088.5" y="1321.5"/>
+            <point key="canvasLocation" x="2312.5" y="1245.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2QJ-VZ-aNs">
@@ -281,7 +332,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wu2-VE-Mcp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1674.5" y="1349.5"/>
+            <point key="canvasLocation" x="1814.5" y="1037.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9xU-ZA-lc2">
@@ -306,9 +357,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="tryDown.png" width="60" height="93"/>
+        <image name="pointingDown2.png" width="60" height="93"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="kW1-E9-hUc"/>
+        <segue reference="fNM-aq-CLs"/>
     </inferredMetricsTieBreakers>
 </document>
