--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -48,25 +48,36 @@
             </objects>
             <point key="canvasLocation" x="1505.5" y="-386.5"/>
         </scene>
-        <!--Schedule Page View Controller-->
-        <scene sceneID="nHK-Kh-yZK">
+        <!--Routes Table View Controller-->
+        <scene sceneID="ilf-lQ-GYl">
             <objects>
-                <viewController id="blO-pd-ZZC" customClass="SchedulePageViewController" customModule="Oxford_Brookes_Bus" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lYL-Cf-cDM"/>
-                        <viewControllerLayoutGuide type="bottom" id="ljQ-zU-uib"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="adM-Cr-toO">
+                <tableViewController id="92j-Xj-7TV" customClass="RoutesTableViewController" customModule="Oxford_Brookes_Bus" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="5vc-1h-5AS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" systemItem="favorites" id="0FO-PU-ulK"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="AgS-Gx-w1E">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="AgS-Gx-w1E" id="2jk-D1-LMM">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="454-R7-6vy" kind="show" id="Tx4-0u-pZP"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="92j-Xj-7TV" id="YDz-L6-6V3"/>
+                            <outlet property="delegate" destination="92j-Xj-7TV" id="Qlc-OH-e55"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="uMg-tZ-bBk"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="NaQ-Xp-WFn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eJv-43-3SG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="923.5" y="1223.5"/>
+            <point key="canvasLocation" x="1567.5" y="1373.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XEf-I3-qat">
@@ -88,17 +99,6 @@
             </objects>
             <point key="canvasLocation" x="1547.5" y="309.5"/>
         </scene>
-        <!--Page View Controller-->
-        <scene sceneID="rCn-Qi-hYt">
-            <objects>
-                <pageViewController storyboardIdentifier="PageController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="4KE-mD-ydx" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" systemItem="search" id="wTI-mG-PjK"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                </pageViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="g8e-PI-FGW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="323.5" y="1825.5"/>
-        </scene>
         <!--Schedule View Controller-->
         <scene sceneID="dJg-Cv-Vne">
             <objects>
@@ -112,7 +112,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JG7-Io-Sw3">
-                                <rect key="frame" x="288" y="20" width="50" height="50"/>
+                                <rect key="frame" x="288" y="66" width="50" height="50"/>
                                 <state key="normal" image="changeDirection.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -121,7 +121,7 @@
                                 </connections>
                             </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
-                                <rect key="frame" x="0.0" y="78" width="375" height="589"/>
+                                <rect key="frame" x="0.0" y="84" width="375" height="583"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
@@ -216,7 +216,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q01-X7-QqX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1341.5" y="1245.5"/>
+            <point key="canvasLocation" x="2153.5" y="1245.5"/>
         </scene>
         <!--Times-->
         <scene sceneID="dUZ-Ls-zfp">
@@ -309,7 +309,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aRU-7C-eIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2438.5" y="989.5"/>
+            <point key="canvasLocation" x="3250.5" y="989.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2QJ-VZ-aNs">
@@ -328,7 +328,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wu2-VE-Mcp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1812.5" y="1183.5"/>
+            <point key="canvasLocation" x="2624.5" y="1183.5"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="9xU-ZA-lc2">
@@ -342,7 +342,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="blO-pd-ZZC" kind="relationship" relationship="viewControllers" id="lWR-kM-Uf5"/>
+                        <segue destination="13L-mO-M85" kind="relationship" relationship="viewControllers" id="PH9-en-I1x"/>
                         <segue destination="s0R-ee-F6h" kind="relationship" relationship="viewControllers" id="qD3-fT-Axh"/>
                         <segue destination="UXK-va-VAa" kind="relationship" relationship="viewControllers" id="4JH-gi-VgW"/>
                     </connections>
@@ -350,6 +350,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dme-Ib-auP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="401.5" y="540.5"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Yka-U7-NMf">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="13L-mO-M85" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="topRated" id="9qj-Xo-ORw"/>
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JKs-9h-uCx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="92j-Xj-7TV" kind="relationship" relationship="rootViewController" id="k2d-HX-TZE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tEI-YT-R1Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="942.5" y="1382.5"/>
         </scene>
     </scenes>
     <resources>
